# WalkieTalkie

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEFERRED.md  README.md  SECURITY.md  SECURITY_FIRST_P2P_MCP_PLAN.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
docs/: compliance-mapping.md  deployment-networking.md  protocol-spec-v0.1.md  threat-model.md
docs/agent-handoffs/: 2026-06-host-security-features.md  2026-06-phase-4-close.md  2026-07-phase-5-close.md  2026-07-phase-6-close.md  2026-07-release-prep.md  README.md
implementation-plan/phases/: README.md  phase-0-security-foundations.md  phase-1-minimal-secure-messaging.md  phase-2-controlled-autonomy.md  phase-3-resilience-and-scale.md  phase-4-integration-proof.md  phase-5-the-fabric.md  phase-6-the-network.md  plan-verification-report.md
security-foundations/: README.md
security-foundations/contracts/: README.md  audit-event-schema.md  capability-token-schema.md  discovery-record-schema.md  envelope-schema.md  security-error-response-schema.md
security-foundations/envelope/: _regen_vectors.py  admission_coupling.py  alerting.py  audit.py  audit_query.py  bootstrap_bundle.py  canary_policy.py  canonicalization.md  capability_issuer.py  capability_token.py  capacity_budgets.py  capacity_rebalancer.py  checkpointed_execution.py  data_classification.py  delegation_receipt.py  deny_reason.py  discovery_propagation.py  discovery_record.py  eclipse_resistance.py  egress_policy.py  image_attestation.py  instruction_isolation.py  issuance_policy.py  issuer_trust_store.py  key_rotation.py  output_scanning.py  peer_admission.py  policy_audit.py  policy_bundle.py  policy_engine.py  prompt_assembly.py  proof_obligations.py  rate_limiter.py  recovery_readmission.py  retrieval_policy.py  reviewer_workflow.py  revocation_convergence.py  revocation_list.py  runtime_profile.py  safe_mode_engine.py  (+59 more)
security-foundations/envelope/test-vectors/: adversarial-corpus-v0.json  audit-event.jsonl  capability-token.txt  dev-issuer-1.pub.pem  dev-kid-1.pub.pem  tampered-discovery-record.json  tampered-envelope.json  valid-discovery-record.json  valid-envelope.json
security-foundations/integrations/mcp/: demo_tools.py  envelope_adapter.py  host.py  host_support.py  test_envelope_adapter.py  test_host.py  test_runbook.py  test_smoke.py
security-foundations/integrations/mcp/bridge/: .gitignore  README.md  demo_conversation.py  gen_bridge_config.py  mail_hook.py  mesh_mcp_bridge.py  responder.py  test_bridge.py
security-foundations/integrations/mcp/example/: .gitignore  README.md  _gen_sample_audit.py  gen_keys.py  issuer-manifest.json  sample-audit.jsonl  workload-manifest.json
security-foundations/integrations/mcp/federation/: .gitignore  README.md  demo_federation.py  mcp_gateway.py  test_federation.py  tool_server.py
security-foundations/integrations/mcp/workspace/: .gitignore  README.md  demo_workspace.py  test_workspace.py  test_workspace_exhaustive.py  watch.py  workspace_server.py
security-foundations/mesh/: connection_pool.py  gossip_discovery.py  membership.py  node.py  routing.py  socket_transport.py  test_connection_pool.py  test_gossip_discovery.py  test_membership.py  test_mesh_round_trip.py  test_mtls_multihop.py  test_mtls_round_trip.py  test_node.py  test_routing.py  test_tls_transport.py  test_transport.py  tls_transport.py  transport.py
