[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walkietalkie-envelope"
version = "0.0.1"
description = "WalkieTalkie Phase 0 envelope verifier and trust store reference implementation."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
  "jcs>=0.2.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["security-foundations/envelope"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
